--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
   margin: 0;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: #f3f3f3;
 }
